# cfpb-mcp

./: .cache_ggshield  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  TODOs.md  citations_mapping.py  claude.md  conftest.py  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  server.py  wrangler.toml
.github/: copilot-instructions.md
docker/: Playwright Docker Considerations.md
docs/: CFPB_UI_URL_CONSTRUCTION.md  PHASE_4_5_COMPLETE.md  dev-cycle.md  public-contracts.md  testing.md
planning/: QUERY_API_PARAM_MAPPING.md  ROADMAP.md  ROADMAP_v2.md  VISION.md  agent-facing-surface.md  bug-report-anthropic.md  build-trigger.md  cf-py-package-mgmt.md  cfpb-mcp-refactoring-analysis.md  cloudflare_deploy_prep.md  deeplink-normalization.md  fastmcp-test-notes.md  fastmcp_rest_parity_audit.md  gripes about agent facing surface.md  mcp-oauth-best-practices.md  typescript-flavor.md
py-mcp/: citations_mapping.py  conftest.py  docker-compose.test.yml  ruff.toml
scripts/: demo_cfpb_ui.py  dev_with_ngrok.py  run_tests.py  run_wrangler_probe.sh  wrangler_deploy.py  wrangler_versions_upload.sh
sidequest/: notes_app.py  server.py
src/: __init__.py  server.py
temp/: check_claude_legacy.sh  company_signal_pipeline.py  signal_helpers_explore.py
tests/: conftest.py  playwright_helpers.py  test_cfpb_ui.py  test_citations.py  test_mcp_auth.py  test_mcp_endpoints.py  test_rest_endpoints.py  test_rest_openapi.py
ts-mcp/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  (+2 more)
(+159 files in other folders)
